# PySmartPack

./: .gitattributes  .gitignore  DESIGN.md  DESIGN_EN.md  LICENSE  README.md  README_EN.md  app_main.py  pyproject.toml  requirements.txt  run.bat  run.sh
.github/workflows/: build.yml
examples/data_heavy/: app.py  settings.yaml
examples/data_heavy/data/: table.xlsx
examples/data_heavy/models/: weights.npz
examples/multi_package/: main.py
examples/multi_package/data/: config.json
examples/multi_package/mypkg/: __init__.py  plugins.py
examples/single_file/: hello.py
scripts/: build_app.py
src/pysmartpack/: __init__.py  __main__.py  cli.py
src/pysmartpack/core/: __init__.py  config_generator.py  deps_db.py  env_detector.py  models.py  packager.py  persistence.py  scanner.py  size_analyzer.py
src/pysmartpack/core/llm/: __init__.py  advisor.py  prompts.py  providers.py
src/pysmartpack/ui/: __init__.py  app.py  history_interface.py  main_window.py  pack_interface.py  settings_interface.py  theme.py  workers.py
tests/: conftest.py  test_advisor.py  test_config_generator.py  test_env_detector.py  test_providers.py  test_scanner.py  test_size_analyzer.py
