[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysmartpack"
version = "0.1.0"
description = "PySmartPack - 智能 Python 打包器：PyInstaller/Nuitka 的现代化智能前端"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "PySmartPack" }]
keywords = ["pyinstaller", "nuitka", "packaging", "gui", "desktop", "fluent"]

dependencies = [
    "PySide6>=6.6",
    "PySide6-Fluent-Widgets>=1.5",
    "PyInstaller>=6.0",
    "packaging>=23.0",
    "tomli>=2.0 ; python_version < '3.11'",
]

[project.optional-dependencies]
# Optional packaging backend
nuitka = ["nuitka>=2.0"]
# Optional LLM advisor providers (all off by default; only needed if user enables LLM)
llm = ["openai>=1.0", "anthropic>=0.30", "httpx>=0.27"]
# Dev / test
dev = ["pytest>=8.0", "pytest-qt>=4.4", "ruff>=0.6"]

[project.scripts]
pysmartpack = "pysmartpack.__main__:main"

[project.gui-scripts]
pysmartpack-gui = "pysmartpack.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pysmartpack = ["resources/*", "config/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"
